add map function

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Soon To Be Announced 👀</title>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyAKNgnnXm1MIuU4GLL2OmPTZo8KkxJtG5E"></script>
+
+    <title>Jelajahi - Temanmu Dalam Lokasi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
